--- a/cmark-gfm-swift.xcodeproj/xcshareddata/xcschemes/cmark-gfm-swift-macOS.xcscheme
+++ b/cmark-gfm-swift.xcodeproj/xcshareddata/xcschemes/cmark-gfm-swift-macOS.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8801F7CD230E82FD00C161B0"
+               BuildableName = "cmark-gfm-swift-macOS.framework"
+               BlueprintName = "cmark-gfm-swift-macOS"
+               ReferencedContainer = "container:cmark-gfm-swift.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -12,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "29C28E362070A6F4002C19F7"
-               BuildableName = "cmark_gfm_swiftTests.xctest"
-               BlueprintName = "cmark_gfm_swiftTests"
-               ReferencedContainer = "container:cmark-gfm-swift.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -36,6 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8801F7CD230E82FD00C161B0"
+            BuildableName = "cmark-gfm-swift-macOS.framework"
+            BlueprintName = "cmark-gfm-swift-macOS"
+            ReferencedContainer = "container:cmark-gfm-swift.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -45,6 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8801F7CD230E82FD00C161B0"
+            BuildableName = "cmark-gfm-swift-macOS.framework"
+            BlueprintName = "cmark-gfm-swift-macOS"
+            ReferencedContainer = "container:cmark-gfm-swift.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
